--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,12 +16,17 @@ django==4.1.11
     # via
     #   -r src/requirements/requirements.in
     #   dj-database-url
+    #   djangorestframework
+djangorestframework==3.14.0
+    # via -r src/requirements/requirements.in
 idna==3.4
     # via requests
 psycopg2-binary==2.9.7
     # via -r src/requirements/requirements.in
 python-decouple==3.8
     # via -r src/requirements/requirements.in
+pytz==2023.3.post1
+    # via djangorestframework
 requests==2.31.0
     # via -r src/requirements/requirements.in
 sqlparse==0.4.4
