--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -33,5 +33,7 @@ sqlparse==0.4.4
     # via django
 typing-extensions==4.7.1
     # via dj-database-url
+tzdata==2023.3
+    # via django
 urllib3==2.0.4
     # via requests
