--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,7 +16,10 @@ django==4.1.11
     # via
     #   -r src/requirements/requirements.in
     #   dj-database-url
+    #   django-cors-headers
     #   djangorestframework
+django-cors-headers==4.3.0
+    # via -r src/requirements/requirements.in
 djangorestframework==3.14.0
     # via -r src/requirements/requirements.in
 idna==3.4
@@ -33,7 +36,5 @@ sqlparse==0.4.4
     # via django
 typing-extensions==4.7.1
     # via dj-database-url
-tzdata==2023.3
-    # via django
 urllib3==2.0.4
     # via requests
