--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -14,6 +14,10 @@ charset-normalizer==3.2.0
     # via requests
 click==8.1.7
     # via nltk
+colorama==0.4.6
+    # via
+    #   click
+    #   tqdm
 dj-database-url==2.1.0
     # via -r src/requirements/requirements.in
 django==4.1.11
@@ -57,6 +61,8 @@ typing-extensions==4.7.1
     # via
     #   dj-database-url
     #   stripe
+tzdata==2024.1
+    # via django
 urllib3==2.0.4
     # via requests
 wheel==0.42.0
